--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
           </h1>
 
           <aside>
-            <a href="/me">Settings</a>
+            <a id="head-me" href="/me">Settings</a>
             <a id="head-sign_out" href="/sign-out">Sign out</a>
           </aside>
         </div>
