--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -22,6 +22,10 @@
   </head>
 
   <body>
+    {{ if .FlashMessage }}
+      <div id="flash">{{ .FlashMessage }}</div>
+    {{ end }}
+
     <h1>I Forgot</h1>
     <p>
       Forget your password? Enter your email address below and a reset link will be emailed to you.
