Allow YouTube and Vimeo in CSP

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>{{ getTitle }}</title>
     <link rel="stylesheet" href="/static/style/main.css" />
     <script src="/static/script/lib/markdown-it.min.8.2.2.js"></script>
+    <script src="/static/script/lib/markdown-it-container.2.0.0.min.js"></script>
     <script src="/static/script/lib/marked.min.js"></script>
     <script src="/static/script/page.js"></script>
     <link rel="icon" type="image/x-icon" href="/static/icon/favicon.ico" />
