Tweak spoiler button style; increase edit textarea rows

--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -332,8 +332,9 @@ article {
 
   .article-spoiler-button {
     content: "Spoiler";
+    display: block;
     font-size: 0.9em;
-    visibility: visible;
+    margin-bottom: 1em;
   }
 
   @include mobile {
