--- a/static/style/main.css
+++ b/static/style/main.css
@@ -267,8 +267,9 @@ article {
     display: none; }
   article .article-spoiler-button {
     content: "Spoiler";
+    display: block;
     font-size: 0.9em;
-    visibility: visible; }
+    margin-bottom: 1em; }
   @media (max-width: 959px) {
     article {
       background-image: none !important;
