Disable password field in user settings

--- a/templates/me.html
+++ b/templates/me.html
@@ -52,7 +52,7 @@
       </label>
 
       <label class="textfield">
-        <input name="password" type="password" placeholder="********" autocomplete="off" />
+        <input name="password" type="password" placeholder="********" autocomplete="off" disabled="disabled" />
         <span class="textfield__label">Password (8 characters or greater)</span>
       </label>
 
