--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -376,6 +376,26 @@ article {
   }
 }
 
+#article-menu-modal {
+  background: black;
+  border: 1px solid gray;
+  display: none;
+  position: absolute;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    border-bottom: 1px solid gray;
+    padding: 0.6em 0.8em;
+  }
+
+  .delete {
+    background: red;
+    color: white;
+  }
+}
+
 ///////////
 // Reply //
 ///////////
