Add forgot password link to sign-in

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -39,5 +39,7 @@
 
       <input type="submit" value="Sign in">
     </form>
+
+    <small><a href="/forgot">Forgot your password?</a></small>
   </body>
 </html>
