--- a/static/style/main.css
+++ b/static/style/main.css
@@ -339,16 +339,18 @@ article {
         margin-right: 1em; } }
 
 #article-menu-modal {
-  background: black;
-  border: 1px solid gray;
+  background: #666;
+  bottom: 0px;
   display: none;
-  position: absolute;
+  position: fixed;
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  text-align: center;
+  width: 100%; }
   #article-menu-modal li {
-    border-bottom: 1px solid gray;
-    padding: 0.6em 0.8em; }
+    border-top: 1px solid gray;
+    padding: 1.2em 0; }
   #article-menu-modal .delete {
     background: red;
     color: white; }
