--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -405,17 +405,20 @@ article {
 }
 
 #article-menu-modal {
-  background: black;
-  border: 1px solid gray;
+  background: #666;
+  bottom: 0px;
   display: none;
-  position: absolute;
+  position: fixed;
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: center;
+  transition: 0.5s bottom;
+  width: 100%;
 
   li {
-    border-bottom: 1px solid gray;
-    padding: 0.6em 0.8em;
+    border-top: 1px solid gray;
+    padding: 1.2em 0;
   }
 
   .delete {
