--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -415,6 +415,7 @@ article {
   text-align: center;
   transition: 0.5s bottom;
   width: 100%;
+  z-index: 100;
 
   li {
     border-top: 1px solid gray;
@@ -539,3 +540,13 @@ footer {
 }
 
 .page-next-enabled { border-left-color:white !important }
+
+#blank {
+  background: rgba(0, 0, 0, 0.4);
+  display: none;
+  position: fixed;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
