--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -254,6 +254,21 @@ article {
     @include desktop { max-width: 800px }
   }
 
+  a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+
   blockquote {
     background: #111;
     box-sizing: border-box;
@@ -434,12 +449,14 @@ article {
   }
 }
 
-#article-edit-submit {
+#article-edit-submit, #article-edit-cancel {
   font-size: 1em;
   margin-top: 0.75em;
 
   //@include desktop { display: none }
 }
+
+#article-edit-cancel { margin-left: 2em }
 
 .article-editable {
   &:focus {
