page view: remove links to user profiles

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
           <div class="article-actions"></div>         
           <header>
             <hgroup>
-              <h1><a href="/users/{{ .AuthorName }}" rel="author">{{ .AuthorName }}</a></h1>
+              <h1><!--<a href="/users/{{ .AuthorName }}" rel="author">-->{{ .AuthorName }}<!--</a>--></h1>
               {{ if .Title }}<h2>{{ .Title }}</h2>{{ end }}
             </hgroup>
 
