--- a/static/style/main.css
+++ b/static/style/main.css
@@ -203,6 +203,8 @@ article {
   @media (min-width: 960px) {
     article img {
       max-width: 800px; } }
+  article img[src=""] {
+    display: none; }
   article a {
     overflow-wrap: break-word;
     word-wrap: break-word;
