--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>{{ getTitle }}</title>
     <link rel="stylesheet" href="/static/style/main.css" />
