--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>{{ getTitleWith "Reset Password" }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
