--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -254,7 +254,7 @@ article {
     @include desktop { max-width: 800px }
   }
 
-  img[src=""] { display: none } // if they've been blocked by the Content Security Policy, for ex.
+  //img[src=""] { display: none } // if they've been blocked by the Content Security Policy, for ex.
 
   a {
     overflow-wrap: break-word;
