--- a/templates/me.html
+++ b/templates/me.html
@@ -113,6 +113,16 @@
       <h3>Two-Factor Authentication</h3>
       {{ if .Has2FAEnabled }}
         <p>Status: <span style="color: green">Enabled</span></p>
+        <p>
+          Length of time before reverification is required:
+          {{ range $i, $e := .DurationOpts }}
+            <label class="radio">
+              <input type="radio" name="auth_duration" />
+              <span class="radio__label">{{ $e }}</span>
+            </label>
+          {{ end }}
+        </p>
+        
         <a class="btn" href="/me/disable-two-factor-authentication">Disable two-factor authentication</a>
       {{ else }}
         <p>Status: <span style="color: red">Disabled</span></p>
