--- a/templates/me.html
+++ b/templates/me.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>{{ getTitleWith "Your Account" }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/static/style/lib/cutestrap.min.css">
     <style type="text/css">
       @media (max-width: 600px) {
@@ -109,29 +109,33 @@
 
       <input type="submit" value="Save changes">
       <hr/>
+    </form>
 
-      <h3>Two-Factor Authentication</h3>
-      {{ if .Has2FAEnabled }}
+    <h3>Two-Factor Authentication</h3>
+    {{ if .Has2FAEnabled }}
+      <form method="post" action="/me/two-factor-authentication-duration">
         <p>Status: <span style="color: green">Enabled</span></p>
         <p>
-          Length of time before reverification is required:
-          {{ range $i, $e := .DurationOpts }}
+          Time before reverification is required:
+          {{ range .DurationOpts }}
             <label class="radio">
-              <input type="radio" name="auth_duration" />
-              <span class="radio__label">{{ $e }}</span>
+              <input type="radio" name="auth_duration" {{ if eq . $.CurrentDuration }}checked{{ end }} />
+              <span class="radio__label">{{ . }} hours</span>
             </label>
           {{ end }}
         </p>
         
-        <a class="btn" href="/me/disable-two-factor-authentication">Disable two-factor authentication</a>
-      {{ else }}
-        <p>Status: <span style="color: red">Disabled</span></p>
-        <a class="btn" href="/me/enable-two-factor-authentication">Enable two-factor authentication</a>
-      {{ end }}
-      <hr/>
+        <input type="submit" value="Save changes">
+      </form>
+      <a class="btn" href="/me/disable-two-factor-authentication">Disable two-factor authentication</a>
+    {{ else }}
+      <p>Status: <span style="color: red">Disabled</span></p>
+      <a class="btn" href="/me/enable-two-factor-authentication">Enable two-factor authentication</a>
+    {{ end }}
+    <hr/>
 
-      <h3>Devices and Sessions</h3>
-        <section id="sessions">
+    <h3>Devices and Sessions</h3>
+      <section id="sessions">
         {{ range $i, $e := .Sessions }}
           <div class="grid grid--medium">
             <div class="column--heavy">
@@ -145,7 +149,7 @@
           </div>
           <hr>
         {{ end }}
-      </div>
-    </form>
+      </section>
+    </div>
   </body>
 </html>
