me/: add link to view MFA recovery codes

--- a/templates/me.html
+++ b/templates/me.html
@@ -135,6 +135,7 @@
         <input type="submit" value="Save changes">
       </form>
       <a class="btn" href="/me/disable-two-factor-authentication">Disable two-factor authentication</a>
+      <p><br><a href="/me/recovery-codes">View recovery codes</a></p>
     {{ else }}
       <p>Status: <span style="color: red">Disabled</span></p>
       <a class="btn" href="/me/enable-two-factor-authentication">Enable two-factor authentication</a>
